# aoc2022

./: CMakeLists.txt  README.md  aoc.cpp
include/: day01.h  day02.h  day03.h  utils.h
src/: day01.cpp  day02.cpp  day03.cpp
util/: utils.cpp
